--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "pages/desktop/browserid"]
-	path = pages/desktop/browserid
+	path = browserid
 	url = git://github.com/davehunt/bidpom.git
