--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,9 @@ unittestzero
 py==1.4.7
 pytest==2.2.3
 pytest-xdist==1.8
-pytest-mozwebqa==0.8
+pytest-mozwebqa==0.9
 PyYAML==3.10
+certifi==0.0.8
+chardet==1.0.1
+execnet==1.0.9
+requests==0.11.2
