Test that user can Set up pre-approval on Payment Settings page. https://litmus.mozilla.org/show_test.cgi?id=58172 https://www.pivotaltracker.com/story/show/29581549

--- a/credentials.yaml
+++ b/credentials.yaml
@@ -36,3 +36,11 @@ default:
     email: <value>
     password: <value>
     name: <value>
+paypal:
+    email: <value>
+    password: <value>
+    name: <value>
+sandbox:
+    email: <value>
+    password: <value>
+    name: <value>
