add credentials file

--- a/credentials.yaml
+++ b/credentials.yaml
@@ -36,6 +36,8 @@ default:
     email: <value>
     password: <value>
     name: <value>
+    consumer_key: <value>
+    consumer_secret: <value>
 paypal:
     email: <value>
     password: <value>
