code review update

--- a/credentials.yaml
+++ b/credentials.yaml
@@ -36,8 +36,9 @@ default:
     email: <value>
     password: <value>
     name: <value>
-    consumer_key: <value>
-    consumer_secret: <value>
+api:
+    key: <value>
+    secret: <value>
 paypal:
     email: <value>
     password: <value>
