fix api issues to run tests on stage/dev

--- a/credentials.yaml
+++ b/credentials.yaml
@@ -36,7 +36,10 @@ default:
     email: <value>
     password: <value>
     name: <value>
-api:
+api-dev:
+    key: <value>
+    secret: <value>
+api-stage:
     key: <value>
     secret: <value>
 paypal:
