--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,4 @@ chardet==2.1.1
 execnet==1.1
 requests==1.2.3
 Marketplace==0.1.5a
+-e git+https://github.com/mozilla/bidpom.git@master#egg=browserid
