--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,4 @@ chardet==2.1.1
 execnet==1.1
 requests==1.2.3
 Marketplace==0.9.1
+-e git+https://github.com/AndreiH/fxa-python-client.git@api_url#egg=fxa-python-client
