--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,13 @@ before_install:
   - git submodule update --init --recursive
 
 install:
+  - "pip install -r https://raw.github.com/Mozilla/webqa-infrastructure-requirements/master/requirements.txt"
   - "pip install -Ur requirements.txt"
 
 before_script:
   - sh -e /etc/init.d/xvfb start
 
-script: py.test tests/desktop -s -n 4 -v -r fsxXR --baseurl=https://marketplace-dev.allizom.org --driver=firefox --destructive -m "not credentials and not action_chains"
+script: py.test tests/desktop -s -n 4 -v -r fsxXR --reruns=2 --baseurl=https://marketplace-dev.allizom.org --driver=firefox --destructive -m "not credentials and not action_chains"
 
 env:
   - DISPLAY=':99.0'
