--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python: 2.7
 
 install: "pip install flake8"
 
-before_script: "flake8 . --ignore=E501"
+script: "flake8 . --ignore=E501"
 
 notifications:
   email: webqa-ci@mozilla.org
