--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ unittestzero
 py==1.4.26
 pytest==2.7.0
 pytest-mozwebqa
-PyYAML==3.10
+pytest-variables
 certifi==0.0.8
 chardet==2.1.1
 execnet==1.1
