--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fxapom==1.7.1
 Marketplace==0.9.2
-pytest==2.7.3
-pytest-selenium>=1.2.0rc1
+pytest==2.9.0
+pytest-selenium
 pytest-variables
-requests==2.8.1
+pytest-xdist==1.14
+requests==2.9.1
